--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>Here for You</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  #<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel = "stylesheet" href = "style.css">
   <link href="img/favicon.png" type="image/x-icon" rel="icon" />
 </head>
 <body>
