--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <link rel = "stylesheet" href = "style.css">
   <link href="img/favicon.png" type="image/x-icon" rel="icon" />
 </head>
-<body>
-
+  <body>
+    <nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:250px" id="mySidebar">
+      <div class="w3-container w3-display-container w3-padding-16">
+        <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
+        <h3 class="w3-wide"><b>LOGO</b></h3>
+      </div>
+    </nav>
 
 </body>
 </html>
