--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body id="body"><!-- BEGIN WAYBACK TOOLBAR INSERT -->
+<div class="sidenav">
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
+</div>	
 <style type="text/css">
 body {
   margin-top:0 !important;
