--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel = "stylesheet" href = "style.css">
   <link href="img/favicon.png" type="image/x-icon" rel="icon" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> #hamburger menu
 </head>
 
 <body>
-<div class="topnav">
-  <a class="active" href="#home">Home</a>
+<div class="topnav" id="myTopnav">
+  <a href="#home" class="active">Home</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
-</div> 
-
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
 
 </body>
 </html>
