--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="#home" class="active">Home</a>
     <a href="#news">News</a>
     <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a href="about-us.html">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
