--- a/about-us.html
+++ b/about-us.html
@@ -13,9 +13,9 @@
   <script src="external.js"></script>
   <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about" class="active">About</a>
+    <a href="team.html">Team</a>
+    <a href="contact.html">Contact</a>
+    <a href="about-us.html" class="active">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
