--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <script src="external.js"></script>
   <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
-    <a href="team.html">Team</a>
+    <a href="resources.html">Resource</a>
     <a href="contact.html" class="active">Contact</a>
     <a href="about-us.html">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
