--- a/about-us.html
+++ b/about-us.html
@@ -13,7 +13,7 @@
   <script src="external.js"></script>
   <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
-    <a href="team.html">Team</a>
+    <a href="resources.html">Resources</a>
     <a href="contact.html">Contact</a>
     <a href="about-us.html" class="active">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
