--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <i class="fa fa-bars"></i>
     </a>
   </div>
+  <h1 style="float:left;">Here for You</h1>
+  <p>We are a student organization at CMU!</p>
 
 </body>
 </html>
