--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </a>
   </div>
   <h1 style="float:left;">Here for You</h1>
-  <p>We are a student organization at CMU!</p>
+  <p style="float:left;">We are a student organization at CMU!</p>
 
 </body>
 </html>
