--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <script src="external.js"></script>
   <div class="topnav" id="myTopnav">
     <a href="index.html" class="active">Home</a>
-    <a href="resources.html">Resources</a>
-    <a href="contact.html">Contact</a>
-    <a href="about-us.html">About</a>
+    <a href="resources">Resources</a>
+    <a href="contact">Contact</a>
+    <a href="about-us">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
