--- a/about-us.html
+++ b/about-us.html
@@ -12,10 +12,10 @@
 <body>
   <script src="external.js"></script>
   <div class="topnav" id="myTopnav">
-    <a href="index.html">Home</a>
-    <a href="resources.html">Resources</a>
-    <a href="contact.html">Contact</a>
-    <a href="about-us.html" class="active">About</a>
+    <a href="">Home</a>
+    <a href="resources">Resources</a>
+    <a href="contact">Contact</a>
+    <a href="about-us" class="active">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
