--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
 <body>
   <script src="external.js"></script>
   <div class="topnav" id="myTopnav">
-    <a href="" class="active">Home</a>
+    <a href="">Home</a>
     <a href="resources">Resources</a>
-    <a href="contact">Contact</a>
+    <a href="contact" class = "active">Contact</a>
     <a href="about-us">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
