--- a/resources.html
+++ b/resources.html
@@ -12,7 +12,7 @@
 <body>
   <script src="external.js"></script>
   <div class="topnav" id="myTopnav">
-    <a href="">Home</a>
+    <a href="/">Home</a>
     <a href="resources" class = "active">Resources</a>
     <a href="contact">Contact</a>
     <a href="about-us">About</a>
