--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
 <body>
   <script src="external.js"></script>
   <div class="topnav" id="myTopnav">
-    <a href="">Home</a>
+    <a href="/">Home</a>
     <a href="resources">Resources</a>
     <a href="contact">Contact</a>
     <a href="about-us" class="active">About</a>
