--- a/resources.html
+++ b/resources.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Here for You</title>
+  <title>Resource List from Here for You</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel = "stylesheet" href = "style.css">
