--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
       <i class="fa fa-bars"></i>
     </a>
   </div>
-  <h1 style="float:left;">Here for You</h1>
-  <p style="float:left;">We are a student organization at CMU!</p>
+  <div class = "bg-shape">
+    <h1 style="float:left;">Here for You</h1>
+    <p style="float:left;">We are a student organization at CMU!</p>
+  </div>
 
 </body>
 </html>
