--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
     </a>
   </div>
   <div class = "bg-shape">
-    <h1 style="float:left;">Here for You</h1>
-    <p style="float:left;">We are a student organization at CMU!</p>
   </div>
-
+  <div class = "information">
+    <h1>Here for You</h1>
+    <p>
+      <span>
+        "Here for You is a student organization at Carnegie Mellon University 
+        founded to address student issues regarding student mental health, with a focus on improving campus culture and 
+        improving access to support resources. We seek to:"
+      </span>
+    </p>
+  </div>
 </body>
 </html>
