--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
       <i class="fa fa-bars"></i>
     </a>
   </div>
-  <div class = "bg-shape">
-  </div>
   <div class = "information" >
     <h1>Here for You</h1>
-    <p>
-      <span>
-        "Here for You is a student organization at Carnegie Mellon University 
-        founded to address student issues regarding student mental health, with a focus on improving campus culture and 
-        improving access to support resources. We seek to:"
-      </span>
-    </p>
+    <p>Here for You is a student organization at Carnegie Mellon University founded to address student issues regarding student mental health, with a focus on improving campus culture and improving access to support resources. We seek to:</p>
+    <ol>
+      <li>Support those who are currently facing mental health-related issues and empower them to seek professional help and other resources that both CMU and the Pittsburgh community offer.</li>
+      <li>Advocate for those struggling with mental health issues by working to alleviate the stigma associated with mental illnesses and by becoming a liaison between students and the administration on mental health-related issues.</li>
+      <li>Educate the general student body to better understand what mental health disorders are thereby increasing awareness, teach how to recognize symptoms in a peer or oneself, and what resources are available on campus and in Pittsburgh.</li>
+    </ol>
+    <p>Founded in 2019, our membership is open to all undergraduate and graduate students at CMU.</p>
+    <p>Our Spring 2023 meetings are on Mondays from 5PM to 6PM in PHA19D.</p>
   </div>
 </body>
 </html>
