--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="external.js"></script>
   <div class="topnav" id="myTopnav">
     <a href="/" class="active">Home</a>
+    <a href = "events">Events</a>
     <a href="resources">Resources</a>
     <a href="contact">Contact</a>
     <a href="about-us">About</a>
