--- a/events.html
+++ b/events.html
@@ -12,8 +12,8 @@
 <body>
   <script src="external.js"></script>
   <div class="topnav" id="myTopnav">
-    <a href="/" class="active">Home</a>
-    <a href = "events">Events</a>
+    <a href="index">Home</a>
+    <a href="/" class="active">Events</a>
     <a href="resources">Resources</a>
     <a href="contact">Contact</a>
     <a href="about-us">About</a>
@@ -21,4 +21,5 @@
       <i class="fa fa-bars"></i>
     </a>
   </div>
-  </body>
+</body>
+</html>
