--- a/about-us.html
+++ b/about-us.html
@@ -13,6 +13,7 @@
   <script src="external.js"></script>
   <div class="topnav" id="myTopnav">
     <a href="/">Home</a>
+    <a href="events">Events</a>
     <a href="resources">Resources</a>
     <a href="contact">Contact</a>
     <a href="about-us" class="active">About</a>
